<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_send">

    <fragment
        android:id="@+id/navigation_send"
        android:name="ch.heigvd.iict.dma.labo1.ui.send.SendFragment"
        android:label="@string/main_nav_title_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/navigation_graphql"
        android:name="ch.heigvd.iict.dma.labo1.ui.graphql.GraphQlFragment"
        android:label="@string/main_nav_title_graphql"
        tools:layout="@layout/fragment_graphql" />

    <fragment
        android:id="@+id/navigation_push"
        android:name="ch.heigvd.iict.dma.labo1.ui.push.PushFragment"
        android:label="@string/main_nav_title_push"
        tools:layout="@layout/fragment_push" />

</navigation>