<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/container_padding"
    tools:context=".ui.send.SendFragment">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/fragment_send_serialisation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:checkedChip="@id/fragment_send_serialisation_json"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fragment_send_list"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/fragment_send_serialisation_json"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipIcon="@drawable/json"
            app:chipIconVisible="true"
            android:text="@string/fragment_send_serialisation_json" />

        <com.google.android.material.chip.Chip
            android:id="@+id/fragment_send_serialisation_xml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipIcon="@drawable/xml"
            app:chipIconVisible="true"
            android:text="@string/fragment_send_serialisation_xml" />

        <com.google.android.material.chip.Chip
            android:id="@+id/fragment_send_serialisation_protobuf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipIcon="@drawable/array"
            app:chipIconVisible="true"
            android:text="@string/fragment_send_serialisation_protobuf" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_send_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_send_serialisation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fragment_send_btn_create" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_send_btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_send_btn_clear"
        style="?attr/materialButtonOutlinedStyle"
        app:layout_constraintTop_toTopOf="@id/fragment_send_btn_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fragment_send_btn_create"
        app:layout_constraintBottom_toBottomOf="@id/fragment_send_btn_create" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_send_btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_send_btn_create"
        style="?attr/materialButtonOutlinedStyle"
        app:layout_constraintTop_toBottomOf="@id/fragment_send_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_send_btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_send_btn_send"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintTop_toTopOf="@id/fragment_send_btn_create"
        app:layout_constraintStart_toEndOf="@id/fragment_send_btn_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/fragment_send_btn_create" />

</androidx.constraintlayout.widget.ConstraintLayout>